App-1/client-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata: 
   name: clinet-clusterip-service
spec: 
  type: ClusterIP
  selector: 
    component: web
  ports: 
    - port: 3000
      targetPort: 3000
