App-1/postgres-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: redis-clusterip-service
spec: 
  type: ClusterIP
  selector: 
    component: redis
  ports: 
    - port: 6379
      targetPort: 6379
