App-1/server-clusterip-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: server-clusterip-service
spec:  
    type: ClusterIP 
    selector: 
       component: server
    ports: 
     - port: 5000
       targetPort: 5000
