App-1/ingress-service.yaml
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/cloud-generic.yaml -> It will create a Ingress Controller. It is responsible for converting the Ingress object into Nginx configuration

#https://itnext.io/kubernetes-ingress-controllers-how-to-choose-the-right-one-part-1-41d3554978d2

# / -> Client
# /api -> Server
#Annotations: Additional configurational options that are going to specify higher level configuration around the ingress object

#kubernetes.io/ingress.class: nginx  -> Telling Kubernetes, we want to create a Ingress  controller based on the nginx project

apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
    - http: 
       paths: 
          - path: /
            backend: 
              serviceName: client-clusterip-service
              servicePort: 3000
          - path: /api/
            backend: 
               serviceName: server-clusterip-service
               servicePort: 5000
